# asap_sim2real

./: .clang-format  1  CMakeLists.txt  FIX_TORQUE_CONTROL.patch  SETDEFAULTPOSITION_IN_INITRL_ANALYSIS.md  SIM_VS_REAL_COMPARISON.md  STATE_ESTIMATION_EXPLAINED.md  TORQUE_CONTROL_EXPLANATION.md  analyze_torque_limits.py  check_csv.py  run.sh  run_rl_sim.sh  verify_torque_clip.py  visualize_csv.py
assets/atom_description/: 1.xml  atom.urdf  atom.xml  atom_fixed_upper.urdf  atom_mujoco.py  atom_mujoco.xml  atom_xml_old.xml  config.yaml
assets/atom_description/meshes/: L_hand_base_link.STL  Link12_L.STL  Link12_R.STL  Link13_L.STL  Link13_R.STL  Link14_L.STL  Link15_L.STL  Link15_R.STL  Link17_L.STL  Link17_R.STL  Link19_R.STL  Link21_L.STL  Link21_R.STL  Link22_L.STL  Link22_R.STL  R_hand_base_link.STL
config/: cyclonedds_local.xml
config/kalman_config/atom/: kalman_config.yaml
include/: rl_real_atom.hpp  rl_sim.hpp
include/kalman_estimator/: LinearKalmanFilter.h
policy/: fsm.hpp
policy/atom/: base.yaml  estimation_real_20251125184447.csv  fsm.hpp  motor_20251120185857.csv  motor_20251120191132.csv  motor_20251126170223.csv  motor_20251126170224.csv  tau_layout.xml  test.py
policy/atom/asap/: Asap.hpp
policy/atom/asap/config/: config.yaml
policy/atom/asap/model/: 1124_23000.onnx  1125_3.onnx  1125_v4.onnx  1126_1.onnx  1126_2.onnx  1126_3.onnx  1202_1_pd3.onnx  gst_main6.onnx  model_19000.onnx  model_21000.onnx  model_22000.onnx  model_22400.onnx  model_24000.onnx  model_40000.onnx  model_60000.onnx  model_68000.onnx  model_73000.onnx  model_78000.onnx  model_91000.onnx  policy.onnx  xkc.onnx  xkc_13000.onnx
policy/atom/homie_gym/: homie.hpp
policy/atom/homie_gym/config/: config.yaml
policy/atom/homie_gym/model/: atom_zdj_10_16_14_42.onnx  atom_zdj_10_31_09_58.onnx  atom_zdj_10_31_11_05.onnx  atom_zdj_11_03_10_29.onnx  test185.onnx  test186.onnx  test201.onnx  test202.onnx  test203.onnx  test30.onnx  test499.onnx
policy/atom/homie_vel_gym/: homie_est_vel.hpp
policy/atom/homie_vel_gym/config/: config.yaml
policy/atom/homie_vel_gym/model/: test201_est_vel.onnx
policy/atom/humanoid_gym/: humanoid.hpp
policy/atom/humanoid_gym/config/: config.yaml
policy/atom/humanoid_gym/model/: humanoid-gym-76.onnx  humanoid-gym-77.onnx  humanoid-gym.onnx
src/: atom_mujoco.py  rl_real_atom.cpp  rl_real_old.cpp  rl_sim.cpp
src/kalman_estimator/: LinearKalmanFilter.cpp  LinearKalmanFilter_test1.cpp
src/visual_test/: rerun_urdf.cpp  rerun_visualize.py  test.cpp
